--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "fuse": "^0.12.1",
+    "fuse.js": "^7.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
